Port Fix from Tomcat 6
*[NEWS:webtier glassfish9.1 ea-b07]. Port Fixes from Tomcat 6.
+ Application listeners are not reinitialized when reloading.
+ Use Integer.valueOf instead of new Integer
*

- All QL passed


Original author: jfarcand
Date: 2006-06-08 14:49:57+00:00

svn path=/trunk/; revision=461